# mptcp_so_complicated

./: README.md
blue_dev/mptcp_stream/: CMakeLists.txt  README.md  mp_tracker.py  mpr_server.py  mptcp_stream.cc  test_cli.py
blue_dev/mptcp_stream/proto/: CMakeLists.txt  seg_xfer.pb.cc.old  seg_xfer.pb.h.old  seg_xfer.proto  seg_xfer_pb2.py
blue_dev/old_code/: README.md  flow_watcher.py  flows.py  generate_traffic.py  subflow_watcher.py
pcaps/chapter3_pcaps/: ch3scenario1test1.pcapng  ch3scenario1test2.pcapng  ch3scenario2test1.pcapng  ch3scenario2test2.pcapng  ch3scenario3test1.pcapng  ch3scenario3test2.pcapng
pcaps/chapter4_pcaps/: ch4Socat_afterProxy.pcapng  ch4Socat_beforeProxy.pcapng  ch4Trudy_afterProxy.pcapng  ch4Trudy_beforeProxy.pcapng
red_dev/: splicer.py
red_dev/shellcode_harness/: README.md  command_to_get_shell.txt
red_dev/very_experimental/: test_harness.py
